[gd_scene load_steps=8 format=3 uid="uid://cyrh6du3mhs7f"]

[ext_resource type="Theme" uid="uid://csyr5ylftdp4l" path="res://assets/new_theme.tres" id="1_30s30"]
[ext_resource type="Script" path="res://Trees/class_declaration_node.gd" id="1_faq7e"]
[ext_resource type="Texture2D" uid="uid://brljf2g4erona" path="res://UI/hamburger-menu_delapouite.png" id="3_4wv58"]
[ext_resource type="Texture2D" uid="uid://dp87jsrvjqb8e" path="res://UI/cross-mark_lorc.png" id="3_8gjyx"]
[ext_resource type="PackedScene" uid="uid://b2vw0lgwx7g3r" path="res://class_regions/variables/vars_class_region.tscn" id="3_nsre4"]
[ext_resource type="PackedScene" uid="uid://l6s7pnmj20xu" path="res://class_regions/enums/enum_region.tscn" id="4_vjhxa"]
[ext_resource type="PackedScene" uid="uid://dtqwk0qopg0vm" path="res://class_regions/methods/methods_region.tscn" id="5_yujio"]

[node name="ClassDeclarationNode" type="GraphElement"]
custom_minimum_size = Vector2(320, 0)
anchors_preset = -1
anchor_right = 0.3
offset_left = 148.0
offset_top = 203.0
offset_right = 122.4
offset_bottom = 715.0
theme = ExtResource("1_30s30")
position_offset = Vector2(108, 163)
resizable = true
script = ExtResource("1_faq7e")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"FloatingPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ClassNameLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "- Class -"
horizontal_alignment = 1

[node name="DeleteClassBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.882353, 0.439216, 0.333333, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource("3_8gjyx")
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Name:"

[node name="ClassNameEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_type_variation = &"SmallLineEdit"
text = "MyClass"
placeholder_text = "Class name"

[node name="InheritanceContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/InheritanceContainer"]
layout_mode = 2
text = "Inherit:"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/InheritanceContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/InheritanceContainer/PanelContainer"]
layout_mode = 2

[node name="InheritFromLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/InheritanceContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Node"
horizontal_alignment = 1

[node name="ChangeInheritButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/InheritanceContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_4wv58")
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContainersRoot" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="EnumsRegion" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/ContainersRoot" instance=ExtResource("4_vjhxa")]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="VarsRegion" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/ContainersRoot" instance=ExtResource("3_nsre4")]
unique_name_in_owner = true
layout_mode = 2

[node name="MethodsRegion" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/ContainersRoot" instance=ExtResource("5_yujio")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/DeleteClassBtn" to="." method="delete_class"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer/HeaderContainer/ClassNameEdit" to="." method="_on_class_name_edited"]
